# tessellate

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: mkdocs.yml
docs/docs/: data_dictionary.csv  index.md
tessellate/: __init__.py  dataset.py  features.py  plots.py
tessellate/modeling/: predict.py  train.py
